# camp-kitchen-planner

./: .gitignore  LICENSE  README.md  actions.py  app.py  cli.py  config.toml  demo.py  dialog.py  dump_ingredients_from_recipes.py  ingredients.yaml  interface.py  loader.py  models.py  planner_tool.py  project.yaml  pyproject.toml  reset_db.py  show_recipes.py  tests.py
assets/projects/: KB - dinners.yaml  build.yaml
assets/recipes/: KiezBurn - MoonKino - chili sin carne  KiezBurn - MoonKino - tofu coliflower curry with cucumber salad  chickpea curry with rice  lentils dahl and rice  noburn drinks  (+9 more)
cli/: app.tcss  cli.py  explore.py  ingredient_list_app.py
dev/: dialog.py  interface.py  style.css
planner/: __init__.py  app.py  config.py  database.py  errors.py  explore.py  io.py  loader.py  logging.py  models.py  parse.py
projects/: buffet noburn.yaml  buffet recycle 30%.yaml  buffet recycle 70%.yaml  buffet recycle full.yaml  dinners all.yaml  dinners mon-tue-wed.yaml  dinners thu-fri-sat-sun.yaml  dinners.yaml
recipes/:  thai cabbage salad.ant  (build) lentils dahl and rice.ant  (monday) Soba noodles.ant  (monday) thai cabbage salad.ant  Green salad.ant  KB - buddha bowl  KB - chili sin carne  KB - pasta salad  KB - tofu coliflower curry with cucumber salad  KiezBurn - MoonKino - buddha bowl  Mung beans dahl and rice  Mung beans dahl and rice.ant  Soba noodles  Soba noodles.ant  apple cinnamon overnight oats  buddha bowl  buddha bowl.ant  cabbage salad  cabbage salad.ant  chilli sin carne and rice  chilli sin carne and rice.ant  cucmber radish salad  cucmber radish salad.ant  glass noodles salad  glass noodles salad.ant  green salad  korean tofu  korean tofu.ant  mung beans dahl and rice  noburn buffet  noburn drinks  pan_con_tomate.yaml  pasta_bolognese.yaml  soba noodles  spicy chickpeas and couscous.ant  survivor cookbook - cucumber salad  survivor cookbook - egyption lentil salad  survivor cookbook - pasta salad  thai cabbage salad  thai red curry  (+7 more)
rescaled/: buddha bowl  cabbage salad  chilli sin carne and rice  cucmber radish salad  glass noodles salad  green salad  korean tofu  lentils dahl and rice  mung beans dahl and rice  soba noodles  spicy chickpeas and couscous  thai cabbage salad  thai red curry
shopping_lists/: KB - Madhou  KB - brunch and snacks  KB - drinks  buffet  buffet 30%  buffet 70%  buffet full  buffet.csv  buffet_recycle  buffet_recycle.csv  build  build.csv  dinners  dinners all  dinners mon-tue-wed  dinners thu-fri-sat-sun  dinners.csv  tmp
tests/: conftest.py  test_loader.py  test_models.py  test_parser.py
(+2 files in other folders)
