[tool.poetry]
name = "camp-kitchen-planner"
version = "0.1.0"
description = ""
authors = ["Antoine Gallix <antoine.gallix@a2ei.org>"]
readme = "README.md"
packages = [{include = "planner"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
peewee = "^3.16.2"
prettytable = "^3.8.0"
dynaconf = "^3.1.12"
loguru = "^0.7.0"
python-statemachine = "^2.1.0"
textual = {extras = ["dev"], version = "^0.27.0"}
pyyaml = "^6.0"
funcy = "^2.0"
pytest = "^7.3.2"

[tool.poetry.scripts]
planner = "cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
	# filter out something from pip intertals that emmit a warning
    "ignore:pkg_resources is deprecated as an API",
]
