[project]
name = "camp-kitchen-planner"
version = "1.0.0"
description = "Library for planning meals"
authors = [{ name = "Antoine Gallix", email = "antoine.gallix@protonmail.com" }]
requires-python = ">=3.12,<4.0"
readme = "README.md"
dependencies = [
    "peewee>=3.16.2,<4",
    "prettytable>=3.8.0,<4",
    "dynaconf>=3.1.12,<4",
    "loguru>=0.7.0,<0.8",
    "python-statemachine>=2.1.0,<3",
    "pyyaml~=6.0",
    "funcy~=2.0",
    "pytest>=7.3.2,<8",
    "rich>=13.7.1,<14",
    "click>=8.1.7,<9",
    "textual>=0.66.0,<0.67",
]

[project.scripts]
planner = "cli.cli:main"

[tool.hatch.build.targets.sdist]
include = ["planner"]

[tool.hatch.build.targets.wheel]
include = ["planner"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
filterwarnings = [
    # filter out something from pip intertals that emmit a warning
    "ignore:pkg_resources is deprecated as an API",
]
